pkl-core/src/test/files/LanguageSnippetTests/input/errors/const/constMethod.pkl
function fun() = 1

class Foo {
  foo = fun()
}

foo = new Foo {}
